--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "edu-program",
-  "version": "1.0.0",
-  "main": "server/index.js",
+  "version": "2.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server/index.js"
+    "dev": "vercel dev",
+    "build": "echo 'No build step'",
+    "start": "vercel dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "googleapis": "^105.0.0",
-    "dotenv": "^16.0.3"
+    "googleapis": "^127.0.0",
+    "@vercel/kv": "^1.0.1"
   }
 }
